Fix rendering issues on firefox and safari

--- a/src/styles/MemoryCard.css
+++ b/src/styles/MemoryCard.css
@@ -52,8 +52,8 @@
   backface-visibility: hidden;
   width: 100%;
   height: 100%;
-  z-index: 2;
   padding: 0;
+  transform: rotateX(0deg)
 }
 
 .front {
@@ -220,7 +220,6 @@
   background-repeat: no-repeat;
   width: 2rem;
   height: 1rem;
-  z-index: 2;
 }
 
 .backTurn {
