--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  z-index: -1;
+  z-index: -9999;
+  max-width: 1280px;
 }
 
 .pageLoaded {
@@ -129,6 +130,7 @@ h1 {
 .gameField {
   transition: transform 0.2s linear;
   padding: 7px;
+  opacity: 0.99;
 }
 
 .transformed {
@@ -164,8 +166,9 @@ h1 {
 .butDescsound,
 .githubBut,
 .butDescGH {
-  position: fixed;
+  position: absolute;
   width: 32px;
+  z-index: 999;
 }
 
 .musicButton,
@@ -264,6 +267,12 @@ h1 {
   }
   100% {
     transform: scale(0);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #bgImage {
+    left: calc(50vw - 640px);
   }
 }
 
